--- a/pom-frontend/src/app/app.component.html
+++ b/pom-frontend/src/app/app.component.html
@@ -18,8 +18,8 @@
     <div class="col-md-6">
       <div class="form-group">
         <label for="connect">WebSocket connection:</label>
-        <button id="connect" class="btn btn-default">Connect</button>
-        <button id="disconnect" class="btn btn-default" disabled="disabled">Disconnect
+        <button id="connect" class="btn btn-default" (click)="onConnect()" >Connect</button>
+        <button id="disconnect" class="btn btn-default" (click)="onDisconnect()" disabled="disabled">Disconnect
         </button>
       </div>
     </div>
@@ -27,9 +27,9 @@
       <div class="form-inline">
         <div class="form-group">
           <label for="name">What is your name?</label>
-          <input type="text" id="name" class="form-control" placeholder="Your name here...">
+          <input type="text" id="name" ngModel="sendName" class="form-control" placeholder="Your name here...">
         </div>
-        <button id="send" class="btn btn-default">Send</button>
+        <button id="send" (click)="onSendMessage()" class="btn btn-default">Send</button>
     </div>
     </div>
   </div>
